--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "^14.2.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
+    "flag-icon-css": "^4.1.7",
+    "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primeng": "^14.1.2",
     "rxjs": "~7.5.0",
