--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/router": "^15.0.4",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
-    "flag-icon-css": "^4.1.7",
+    "flag-icons": "^6.7.0",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primeng": "^15.0.1",
