--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
               "node_modules/primeicons/primeicons.css",
               "node_modules/primeng/resources/themes/saga-orange/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
-              "node_modules/flag-icon-css/css/flag-icons.css",
+              "node_modules/flag-icons/less/flag-icons.less",
               "node_modules/primeflex/primeflex.css",
               "src/styles.less"
             ],
