--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
               "node_modules/primeicons/primeicons.css",
               "src/assets/themes/smdn-theme.css",
               "node_modules/primeng/resources/primeng.min.css",
-              "node_modules/flag-icons/less/flag-icons.less",
+              "node_modules/flag-icons/css/flag-icons.min.css",
               "node_modules/primeflex/primeflex.css",
               "src/styles.less"
             ],
