feat(finished landing): Update font styles and improve layout for various screen sizes
Changed the font style from 'Carneys' cursive to serif. Updated the stylesheet references in angular.json. Simplified the scrollbar style and made it universal. Also made numerous layout adjustments in home component for better responsiveness on different screen sizes. Removed redundant number div and capitalised button text in home component HTML.

Signed-off-by: riccardocampani96 <riccardocampani96@gmail.com>

--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,8 @@
               "src/assets"
             ],
             "styles": [
+              "src/assets/fonts/bernier/stylesheet.css",
+              "src/assets/fonts/carneys/stylesheet.css",
               "node_modules/primeicons/primeicons.css",
               "src/assets/themes/smdn-theme.css",
               "node_modules/primeng/resources/primeng.min.css",
